VBQT-1597: fix resource name and align reserve the buttons in case of missing add resource

--- a/src/pages/avails/ingest-panel/IngestPanel.scss
+++ b/src/pages/avails/ingest-panel/IngestPanel.scss
@@ -19,6 +19,7 @@
 
     &__btns {
         display: flex;
+        flex-direction: row-reverse;
         justify-content: space-between;
     }
 }
